--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <h1>Punit Batra</h1>
             <h2>Full Stack Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/PUNITBATRA/Portfolio/blob/master/Punit_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
