--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ This is a real time chat-app built using Node.Js as backend and ReactJs as front
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Get in Touch With me!</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/xgeaokna"
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
