update in skill section

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@ This is a real time chat-app built using Node.Js as backend and ReactJs as front
             <li>ReactJs</li>
             <li>Node.js</li>
             <li>Express</li>
+            <li>Docker</li>
             <li>MongoDB</li>
             <li>HTML</li>
             <li>Css</li>
