--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img src="images/1.png" height="40%" width="40%"/>
 
             <h2>Punit Batra</h2>
-            <h3>SDE Intern at Genval Consulting Group | GSoC'20 @INCF | 
+            <h3>SDE Intern at Genval Consulting,Chennai | GSoC'20 @INCF | 
                 <br/>Google DSC Lead | Full Stack Developer | Open Source Contributor</h3>
             <a href="https://github.com/PUNITBATRA/Portfolio/blob/master/Punit_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
