--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="col-md-8">
                     <p>
                         Hello 👋! I am Punit Batra, currently final year computer science undergraduate student at Shri Mata Vaishno Devi University, Katra, Jammu. I am working as a MERN Stack Developer. I enjoy building everything from small sites and landing pages to rich interactive web apps. I love creating visually stunning and responsive websites. I always try to combine aesthetic with functional aspects, looking for the right balance to communicate without annoying.        
-                     <br/> &emsp; &emsp; I enjoy the collaborative nature of working on a team building a product. The feedback, discussion, and review in this environment brings out the best in each individual member, and is a crucial component in my own personal development. I'm ready to jump onto a supportive team and begin contributing.
+                     <br/> &emsp; &emsp; I enjoy the collaborative nature of working with a team building a product. The feedback, discussion, and review in this environment brings out the best in each individual member, and is a crucial component in my own personal development. I'm ready to jump onto a supportive team and begin contributing.
                         
                         I also enjoy programming and the coding world and conducted various programming and open-source related events in my University.<br/>
                     </p>
@@ -94,18 +94,14 @@
             <div data-date="Jan 2021- Present">
                 <h3>SDE Intern at Genval Consulting Group,Chennai,India</h3>
                 <h4>MERN Stack Developer, Full Time</h4>
-                <p>
-                    Working on extending their futurevolve platform for implementing the dynamic profile templates functionality for multiple user groups. It will help them to create their
-
-profile as templates and web view quickly.               </p>
+                <p>Extended the profile module for multiple user groups and implemented the dynamic templates for each users
+and working on adding fully responsive web-view for all user groups by using ReactJS & fetching data using Node.            </p>
             </div>
             <div data-date="Sept 2020- Nov 2020">
                 <h3>SDE Intern at Genval Consulting Group,Chennai,India</h3>
                 <h4>MERN Stack Developer, Part Time</h4>
                 <p>
-                    Working on extending their futurevolve platform for implementing the dynamic template resume functionality along with drag and drop text editor for writing blogs etc
-
-and analysing more features on which we can work in the upcoming time.               </p>
+                    Implemented the profile module on futurevolve platform for students and added some standard resume templates and analysed other modules like articles and events and enhanced the UX for the events module using React.             </p>
             </div>
             <div data-date="May 2020- August 2020">
                 <h3>Google Summer of Code Student @INCF Org</h3>
