--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2><strong>Punit Batra</strong></h2>
             <h3>SDE Intern at Genval Consulting, Chennai, India | GSoC'20 @INCF Org | 
                 <br/>Google DSC Lead | MERN Stack Developer</h3>
-            <a href="https://drive.google.com/file/d/1mN-n2BajbCM94rEL3yMiqyuVW-QsNc79/view?usp=sharing" class="btn-rounded-white"><strong>Download Resume</strong></a>
+            <a href="https://drive.google.com/file/d/1wJgFaqUSIC1nEHCG2rd6TunEKN9zp6eB/view?usp=sharing" class="btn-rounded-white"><strong>Download Resume</strong></a>
         </div>
         <!-- End #lead-content -->
 
@@ -94,7 +94,7 @@
             <div data-date="Jan 2021- Present">
                 <h3>SDE Intern at Genval Consulting Group,Chennai,India</h3>
                 <h4>MERN Stack Developer, Full Time</h4>
-                <p>Extended the profile module for multiple user groups and implemented the dynamic templates for each users
+                <p>Extending the profile module for multiple user groups and implemented the dynamic templates for each users
 and working on adding fully responsive web-view for all user groups by using ReactJS & fetching data using Node.            </p>
             </div>
             <div data-date="Sept 2020- Nov 2020">
