--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="col-md-8">
                     <p>
                         Hello 👋! I am Punit Batra, currently final year computer science undergraduate student at Shri Mata Vaishno Devi University, Katra, Jammu. I am working as a MERN Stack Developer. I enjoy building everything from small sites and landing pages to rich interactive web apps. I love creating visually stunning and responsive websites. I always try to combine aesthetic with functional aspects, looking for the right balance to communicate without annoying.        
-                     <br/> &emsp; &emsp; I enjoy the collaborative nature of working with a team on building a product. The feedback, discussion, and review in this environment brings out the best in each individual member, and is a crucial component in my own personal development. I'm ready to jump onto a supportive team and begin contributing.
+                     <br/> &emsp; &emsp; I enjoy the collaborative nature of working with a team on building a product. The feedback, discussion, and review in this environment brings out the best in each individual member, and is a crucial component in our own personal development. I'm ready to jump onto a supportive team and begin contributing.
                         
                         I also enjoy programming and the coding world and conducted various programming and open-source related events in my University.<br/>
                     </p>
